; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wftree.c_GetTreeIcon.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wftree.c_GetTreeIcon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hicoTreeDir = common dso_local global i32 0, align 4
@hicoTree = common dso_local global i32 0, align 4
@hicoDir = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetTreeIcon(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = call i64 @HasTreeWindow(i64 %6)
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %3, align 8
  %9 = call i64 @HasDirWindow(i64 %8)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i64, i64* %5, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %12
  %16 = load i32, i32* @hicoTreeDir, align 4
  store i32 %16, i32* %2, align 4
  br label %24

17:                                               ; preds = %12, %1
  %18 = load i64, i64* %4, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load i32, i32* @hicoTree, align 4
  store i32 %21, i32* %2, align 4
  br label %24

22:                                               ; preds = %17
  %23 = load i32, i32* @hicoDir, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %20, %15
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i64 @HasTreeWindow(i64) #1

declare dso_local i64 @HasDirWindow(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
